# disaster-response-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: run.py
app/templates/: master.html
data/: process_data.py
models/: train_classifier.py
