[tool.poetry]
name = "disaster_response_pipeline_project"
version = "0.1.0"
description = ""
authors = ["Canfang"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.39"
sklearn = "^0.0"
nltk = "^3.7"
plotly = "^5.9.0"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
